package org.switch2022.project.model;

import java.util.Date;

/**
 * Creation of the SprintDTO class that contains three instance variables: sprintNumber, startDate and endDate
 */
public class SprintDTO {
    public int sprintNumber;
    public Date startDate;
    public Date endDate;
}
